@@ -16,3 +16,10 @@ Default settings
 For maximum redering speed this option is enabled now by default.
 Because of this you will no longer see compiled template files in $compile_dir as the compiled code
 is merged into the compiled main templates.
+
+Deprecated functionality
+------------------------
+
+    registered objects
+The use of registered objects has been deprecated and is removed from standard Smarty.
+For backward compatibility it is available by the SmartyBC class.
