@@ -4,6 +4,7 @@
 - prefix core functions called from compiled templates with '_'
 - update PHPunit tests
 - remove trailing ?> from Smarty source and format code
+- moved deprecated register object functions into SmartyBC
 
 10.12.2011
 - major change:
